crates/tui/snapshots/inline/marketplace/lsp_inline_servers.snap
---
source: crates/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Language servers ─────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   Available    Configured                                                                          
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Filter server IDs                                                                            │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> Find language servers in Marketplace  ·  Match the exact language route in the package manifest   
  Configure a server by ID  ·  Set mode and optional program path                                   
  Refresh servers  ·  Lists enabled, resolved servers without starting processes                    
  web-lsp  ·  Available · typescript, javascript                                                    
                                                                                                    
  Enter to confirm  ·  Tab/Shift+Tab to switch  ·  / to search  ·  Esc to close
