crates/tui/snapshots/inline/marketplace/marketplace_inline_search.snap
---
source: crates/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Extensions ───────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   Skills    Marketplace    MCP    Hooks    Plugins                                                 
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search Marketplace; Enter to search                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> official                                                                                       -  
  Plugins ────────────────────────────────────────────────────────────────────────────────────────  
  Guide                                                                                          +  
                                                                                                    
  / search · ←/→ details · i install · r refresh
