crates/tui/snapshots/inline/marketplace/mcp_chinese_empty_inline.snap
---
source: crates/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 扩 展  ─────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   技 能     扩 展 市 场     MCP    钩 子     插 件                                                           
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ 搜 索  MCP 服 务 器                                                                               │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  没 有 匹 配 的  MCP 服 务 器                                                                              
                                                                                                    
  Tab/Shift+Tab 切 换  · Enter 返 回  · Esc 关 闭
